test/expected/declare_pmri.out
declare x as pointer to member of C reference to int
                                  ^
35: syntax error: "C": "class", "struct" or "union" expected
